--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   },
   "devDependencies": {
     "@vitest/coverage-v8": "2.1.8",
-    "typescript": "5.7.2",
+    "jsdom": "25.0.1",
+    "typescript": "~5.7.2",
     "vite": "6.0.6",
     "vitest": "2.1.8"
   },
