--- a/package.json
+++ b/package.json
@@ -8,12 +8,15 @@
     "build": "tsc && vite build",
     "preview": "vite preview",
     "test": "vitest",
-    "coverage": "vitest run --coverage"
+    "coverage": "vitest run --coverage",
+    "format": "prettier --write .",
+    "format:check": "prettier --check ."
   },
   "devDependencies": {
     "@vitest/coverage-v8": "2.1.8",
     "jsdom": "25.0.1",
-    "typescript": "~5.7.2",
+    "prettier": "3.4.2",
+    "typescript": "5.7.2",
     "vite": "6.0.6",
     "vitest": "2.1.8"
   },
