--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "test": "vitest",
     "coverage": "vitest run --coverage",
     "format": "prettier --write .",
-    "format:check": "prettier --check ."
+    "format:check": "prettier --check .",
+    "type:check": "tsc --noEmit",
+    "check": "pnpm run \"/.*:check$/\""
   },
   "devDependencies": {
     "@vitest/coverage-v8": "2.1.8",
